// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Questionnaire Beilinson 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            בילינסון
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם היית / הנך בהריון?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם תרמת דם / טרומבוציטים בעבר?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 17?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 50 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי פצע פתוח/שריטה.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה, אדויל ונורופן ב-3 הימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 הימים שלפני התרומה (סתימה ושיננית עד 24 שעות).
          </li>
        </div>
        <div
          className="notesDetails"
        >
          ינתן שירות הסעה במונית / חניה בחניוני עובדי בילינסון למגיעים ברכב. אם חל שינוי במצבך ואין ביכולתך לתרום אנא בטל/י את התור.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Questionnaire Hadasa Ein Kerem 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            הדסה עין כרם
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך בהריון/עברת לידה בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 18?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 55 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עשית קעקוע או עגילים בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי שריטה מדממת.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה בשבוע שלפני התרומה.
          </li>
          <li>
            לא נטלתי משככי כאבים ב-3 הימים שלפני התרומה.
          </li>
          <li>
            אני מרגיש/ה מצוין ב-3 הימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 הימים שלפני התרומה (סתימה ושיננית עד 24 שעות).
          </li>
        </div>
        <div
          className="notesDetails"
        >
          ינתן פתרון חניה לבאים ברכב. במידה ואין איך להגיע, ניתנת אפשרות להסעה בתוך ירושלים. נא ליצור קשר בטלפון: 052−6900091.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Questionnaire Ichilov 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            איכילוב
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם היית / הנך בהריון?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם תרמת דם / טרומבוציטים בעבר?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 18?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 55 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עשית קעקוע או עגילים בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי פצע פתוח/שריטה.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה ב-10 ימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 ימים שלפני התרומה.
          </li>
        </div>
        <div
          className="notesDetails"
        >
          ינתן שירות הסעה במונית / פתרון חניה למגיעים ברכב. אם חל שינוי במצבך ואין ביכולתך לתרום אנא בטל/י את התור.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Questionnaire Other Hospital 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            רמב"ם
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם היית / הנך בהריון?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם תרמת דם / טרומבוציטים בעבר?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 17?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 50 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי פצע פתוח/שריטה.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה, אדויל ונורופן ב-3 הימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 הימים שלפני התרומה (סתימה ושיננית עד 24 שעות).
          </li>
        </div>
        <div
          className="notesDetails"
        >
          ינתן פתרון הסעה למגיעים. אם אין ביכולתך להגיע לתרום, אנא בטל/י את התור.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Questionnaire Soroka 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            סורוקה
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם היית / הנך בהריון?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 18?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 50 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עשית קעקוע או עגילים בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי פצע פתוח/שריטה.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה, אדויל, נורופן ואקמול פוקוס ב-3 הימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 הימים שלפני התרומה (סתימה ושיננית עד 24 שעות).
          </li>
        </div>
        <div
          className="notesDetails"
        >
          ינתן כרטיס חניה בחניון סורוקה בעת התרומה. אם חל שינוי במצבך ואין ביכולתך לתרום אנא בטל/י את התור.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Questionnaire Tel Hashomer 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
          data-testid="ArrowForwardIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          />
        </svg>
      </button>
      <div
        className="title"
      >
        שאלון התאמה 🛠️
      </div>
    </div>
    <div
      className="screen content"
    >
      <div
        className="donationInfo"
      >
        <img
          alt="Appointment"
          className="illustration"
          src="AppointmentCalendar.svg"
        />
        <div
          className="donationInfoText"
        >
          <div
            className="infoTitle"
          >
            פרטי התור הנבחר
          </div>
          <div
            className="appointmentDetails"
          >
            יום ו׳, 13.8, 12:00
            ,
             
            תל השומר
          </div>
        </div>
      </div>
      <div
        className="questionnaireSection"
      >
        <div
          className="questionnaireTitle"
        >
          שאלון התאמה לתרומת טרומבוציטים
        </div>
        <div
          className="questionnaireText"
        >
          עזרו לנו לוודא התאמה ולמנוע מצב בו תגיעו ביום התור אך לא תוכלו לתרום
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם ילדת בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא רלוונטי
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם הנך מעל גיל 18?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם משקלך מעל 55 ק״ג?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עברת ניתוח כירורגי בחצי השנה האחרונה?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="question"
        >
          <div
            className="questionLabel"
          >
            האם עשית קעקוע או עגילים ב-3 החודשים האחרונים?
          </div>
          <div
            className="questionButtons"
          >
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  כן
                </div>
              </div>
            </div>
            <div
              className="questionButton"
            >
              <div
                className="pickerButtonContainer"
              >
                <div
                  className="pickerButton"
                  color="default"
                  onClick={[Function]}
                >
                  לא
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="notesTitle"
        >
          ידוע לי שאוכל לתרום רק אם:
        </div>
        <div
          className="notesText"
        >
          <li>
            אין לי פצע פתוח/שריטה.
          </li>
          <li>
            לא נטלתי אנטיביוטיקה ב-3 הימים שלפני התרומה.
          </li>
          <li>
            לא עברתי טיפול שיניים ב-10 הימים שלפני התרומה (סתימה ושיננית עד 24 שעות).
          </li>
        </div>
        <div
          className="notesDetails"
        >
          לבאים ברכב פרטי ינתן כרטיס חניה לחניון תל השומר.
        </div>
        <div
          className="confirmButtonContainer"
        >
          <div
            className="container"
          >
            <span
              className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root muirtl-5u1n94-MuiButtonBase-root-MuiCheckbox-root"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={null}
            >
              <input
                checked={false}
                className="PrivateSwitchBase-input muirtl-1m9pwf3"
                data-indeterminate={false}
                onChange={[Function]}
                type="checkbox"
              />
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
            <div
              className="label"
            >
              קראתי ומאשר/ת שכל המידע לעיל נכון
            </div>
          </div>
        </div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled button muirtl-jddfkq-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <div
            className="buttonText"
          >
            המשך
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
